--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-ace-shim",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "An Ember shim addon for Ace to include it in older versions of Ember as an ECMA6 module.",
   "directories": {
     "doc": "doc",
@@ -22,15 +22,13 @@
     "ember-cli": "2.5.1",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "^1.4.0",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
+    "ember-cli-htmlbars": "0.7.4",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-export-application-global": "^1.0.5",
+    "ember-export-application-global": "^2.0.0",
     "ember-try": "0.0.4",
     "loader.js": "4.7.0",
     "phantomjs": "^2.1.7"
@@ -40,7 +38,9 @@
     "ember-ace-shim"
   ],
   "dependencies": {
-    "ember-cli-babel": "6.16.0"
+    "ember-cli-import-polyfill": "0.2.0",
+    "ember-cli-babel": "6.16.0",
+    "ace-builds": "^1.2.8"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
